force-app/main/default/objects/WF_History__c/WF_History__c.object-meta.xml
<CustomObject>
    <description>Keep track the status change in the workflow</description>
    <label>Workflow History</label>
    <nameField>
        <displayFormat>WF-{0000}</displayFormat>
        <label>SlNo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workflow History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>