force-app/main/default/objects/WF_History__c/fields/Hours_Spent__c.field-meta.xml
<CustomField>
    <fullName>Hours_Spent__c</fullName>
    <formula>IF(
ISBLANK(Sub_Stage__c ) ,
IF( New_Status__c == &apos;In progress&apos; , Floor((Now()- StartDate__c)*24)+((Floor(MOD((Now()- StartDate__c)*1440,60)))/100), IF(New_Status__c ==&apos;Completed&apos;, Floor((EndDate__c - StartDate__c)*24)+((Floor(MOD((EndDate__c - StartDate__c)*1440,60)))/100) , 0) ) ,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours Spent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>