force-app/main/default/objects/WF_History__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to project record</description>
    <inlineHelpText>Lookup to project record</inlineHelpText>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipName>History</relationshipName>
    <type>Lookup</type>
</CustomField>