force-app/main/default/objects/WF_History__c/fields/Project_Detail_Link__c.field-meta.xml
<CustomField>
    <fullName>Project_Detail_Link__c</fullName>
    <formula>&apos;https://stormsolutionscompany.my.salesforce.com/&apos;+Project__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Detail Link</label>
    <type>Text</type>
</CustomField>