force-app/main/default/objects/WF_History__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>Stage</description>
    <label>Stage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>