force-app/main/default/objects/WF_History__c/fields/Sub_Stage__c.field-meta.xml
<CustomField>
    <fullName>Sub_Stage__c</fullName>
    <description>Sub Stage</description>
    <label>Sub Stage</label>
    <length>200</length>
    <type>Text</type>
</CustomField>