force-app/main/default/objects/WF_History__c/fields/Time_Spent__c.field-meta.xml
<CustomField>
    <fullName>Time_Spent__c</fullName>
    <formula>IF(ISBLANK(EndDate__c),Floor((Now()- CreatedDate)*24)+((Floor(MOD((Now()- CreatedDate)*1440,60)))/100), Floor((EndDate__c- CreatedDate)*24)+((Floor(MOD((EndDate__c- CreatedDate)*1440,60)))/100)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Spent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>