force-app/main/default/objects/WF_History__c/listViews/Management_WF_History.listView-meta.xml
<ListView>
    <fullName>Management_WF_History</fullName>
    <filterScope>Queue</filterScope>
    <label>Management</label>
    <queue>Management</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>